2009-08-06  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ICEDTEA_ENV, ICEDTEA_ENV_ECJ): Allow passing
	as environment.
	
2009-08-06  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ICEDTEA_PATCHES): Make $(DISTRIBUTION_PATCHES) the
	last patches in the list.

2009-08-06  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Bump JDK changeset to obtain execvpe fix.

2009-08-05  Mark Wielaard  <mjw@redhat.com>

	* patches/icedtea-systemtap.patch: Remove workaround for nmethod.cpp.
	* tapset/hotspot.stp.in: Add tapset functions for
	hotspot.method_entry, hotspot.method_return,
	hotspot.compiled_method_load and hotspot.compiled_method_unload.
	* NEWS: Metion new support for java method tracing.
	* INSTALL: Add that java method tracing support needs systemtap
	0.9.9 or higher.

2009-08-06  Andrew John Hughes  <ahughes@redhat.com>

	* INSTALL:
	Mention Shark requirements.
	* NEWS:
	Add release notes for 1.11.
	* configure.ac:
	Bump to 1.11 proper, remove duplicate
	VisualVM/NetBeans macros.

2009-08-05  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Update md5sums and changeset IDs to include
	security fixes.
	* patches/security/icedtea-6592792.patch:
	Remove fixes applied as part of 6657133

2009-08-05  Lillian Angel  <langel@redhat.com>

	* plugin/icedtea/netscape/javascript/JSObject.java: Security patch
	applied to disallow the ability to run unsigned code as 
	signed under some cases.
	* plugin/icedtea/sun/applet/PluginAppletSecurityContext.java:
	Likewise.
	* netx/net/sourceforge/jnlp/SecurityDesc.java: Likewise.
	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java: Likewise.
	* plugin/icedtea/netscape/javascript/JSObjectCreatePermission.java:
	Likewise.
	* netx/netscape/javascript/JSObjectCreatePermission.java: Likewise.

2009-08-04  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Remove IcedTeaNPPlugin.cc from EXTRA_DIST
	as now under plugin directory tree.
	
2009-08-04  Andrew John Hughes  <ahughes@redhat.com>
