@@ -1,20 +1,20 @@
-OPENJDK_VERSION = b66
+OPENJDK_VERSION = b67
 
-OPENJDK_CHANGESET = e7eeeda332ec
-CORBA_CHANGESET = 1741ea5cb854
-JAXP_CHANGESET = b3d2bf4c255d
-JAXWS_CHANGESET = c37936a72332
-JDK_CHANGESET = 51fcc41d8b24
-LANGTOOLS_CHANGESET = 634f519d6f9a
-HOTSPOT_CHANGESET = 945fcffdbcab
+OPENJDK_CHANGESET = f24111620a51
+CORBA_CHANGESET = 1cb0098b53b2
+JAXP_CHANGESET = 45fc86d2aa5c
+JAXWS_CHANGESET = 73440eb34fb0
+JDK_CHANGESET = cd7d9265b4e6
+LANGTOOLS_CHANGESET = 14b1a8ede954
+HOTSPOT_CHANGESET = 87c6731ab8d1
 
-OPENJDK_MD5SUM = 8f63dbb0dcd83d905e243c58d0135174
-CORBA_MD5SUM = 06ac898f583fc9eec179fc2d1dcb5c71
-JAXP_MD5SUM = 01118a1882ea1ac5205e232bd7c847f7
-JAXWS_MD5SUM = 8c53573f9f072bb273435ee75c7aaaa3
-JDK_MD5SUM = 5ca832939f80db7c2e836141a9cac98a
-LANGTOOLS_MD5SUM = cd1389112baa1b2b24da95555345c1b9
-HOTSPOT_MD5SUM = ce3ab877df030cf4842001918898244e
+OPENJDK_MD5SUM = f5cc1b21cf1a805528300bf931aa821e
+CORBA_MD5SUM = 00fa00a58b465cad40cab9ac05058c24
+JAXP_MD5SUM = 61230cee4199f91ed5675bcf2acad63d
+JAXWS_MD5SUM = fc9d2659fb875ece0e3a5e7894c1bbf8
+JDK_MD5SUM = 8e3fa808fcad7713635a21e127dd0f72
+LANGTOOLS_MD5SUM = a3b15bcf5b76b1639600250fc29c057b
+HOTSPOT_MD5SUM = d0632498485808fdf8f97ef1f388722d
 
 CACAO_VERSION = 0.99.4
 CACAO_MD5SUM = 63220327925ace13756ae334c55a3baa
